Fix thumb grid cell collapce on small thumbnails & binaries

--- a/client/common/blocks/thumb.styl
+++ b/client/common/blocks/thumb.styl
@@ -45,6 +45,8 @@
 thumbImageWidth  = '$$ N.config.users.uploads.resize.sm.max_width || N.config.users.uploads.resize.sm.width $$'px
 thumbImageHeight = '$$ N.config.users.uploads.resize.sm.max_height || N.config.users.uploads.resize.sm.height $$'px
 
+thumbRatio = thumbImageHeight / thumbImageWidth;
+
 // 170x150 -> 119x105
 downScaleSm = 1.428571429
 // 170x150 -> 85x75
@@ -349,6 +351,7 @@ gridFluidItemWidth_2        = (100 / 2)%
 gridFluidItemCornerRadius_2 = 2px;
 
 
+
 .thumb-grid.thumb-grid__m-fluid
   padding 0
   margin 0 (- gridFluidInterval_5 / 2) (- gridFluidInterval_5)
@@ -362,10 +365,28 @@ gridFluidItemCornerRadius_2 = 2px;
     margin 0 0 gridFluidInterval_5
     border-radius gridFluidItemCornerRadius_5
 
-    .thumb
-    .thumb__image
-      width 100%
-      height 100%
+// For fluid grids only
+.thumb-grid__item-inner
+  position relative
+  width 100%
+  max-width 100%
+  &:before
+    display block
+    content ''
+    padding-top (thumbRatio * 100)%
+
+  .thumb
+    position absolute
+    top 0
+    left 0
+    right 0
+    bottom 0
+    width 100%
+    height 100%
+  .thumb__image
+    width unset !important
+    height unset !important
+    max-width 100%
 
 @media (max-width: 800px - 1)
   .thumb-grid.thumb-grid__m-fluid
